--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#7e7e7e</color>
+    <color name="colorPrimaryDark">#6e6e6e</color>
+    <color name="colorAccent">#7e7e7e</color>
 </resources>
