--- a/app/src/main/res/layout/appbar_search.xml
+++ b/app/src/main/res/layout/appbar_search.xml
@@ -1,6 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:layout_gravity="center_horizontal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:padding="10dp"
+        android:src="@drawable/ic_close_black_24dp" />
+
+    <!-- Library
+    https://github.com/markzhai/RememberEditText -->
+    <cn.zhaiyifan.rememberedittext.RememberEditText
+        android:id="@+id/serachInput"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/backButton"
+        android:hint="@string/search_by_city"
+        android:inputType="textCapWords"
+        app:autoFill="false"
+        app:autoSave="true"
+        app:deleteIcon="@drawable/search_clear"
+        app:dropDownIcon="@drawable/search_down"
+        app:dropUpIcon="@drawable/search_up"
+        app:rememberCount="6"
+        app:rememberId="searchText" />
+
+    <ImageButton
+        android:id="@+id/searchBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="10dp"
+        android:background="@null"
+        android:padding="10dp"
+        android:src="@drawable/ic_search_black_24dp" />
+
+</RelativeLayout>
