--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="l_gray">#e6e6e6</color>
+    <color name="l_l_gray">#feefefef</color>
+    <color name="gray">#c4c4c4</color>
+    <color name="d_gray">#999999</color>
+
+
+    <color name="background_1">#008cb3</color>
+
     <color name="colorPrimary">#7e7e7e</color>
     <color name="colorPrimaryDark">#6e6e6e</color>
     <color name="colorAccent">#7e7e7e</color>
